--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'World War, 1914-1918 -- Juvenile literature'
 - !lcc 'D501'
+- GITenberg
 title: "The Children's Story of the War Volume 4 (of 10)\r\nThe Story of the Year\
   \ 1915"
 url: http://www.gutenberg.org/ebooks/35386
